<resources>
    <string name="app_name">mHealth_WireFrame</string>

    <string name="title_home">Home</string>
    <string name="title_history">History</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_about">About</string>

    <string name="hello_world">Hello World</string>
    <string name="about">About</string>

    <!-- About page headers -->
    <string name="falling_biomechanics">Falling Biomechanics</string>
    <string name="multiple_sclerosis">Multiple Sclerosis</string>
    <string name="msense_group">The M-Sense Group</string>
    <string name="about_the_app">About the App</string>
    <string name="mhealth_technologies_2019">mHealth Technologies 2019</string>
    <string name="time_s">Time (s)</string>


</resources>
