<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:text="@string/about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/text_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/title_about"
        android:textAlignment="center"
        android:textSize="32sp"
        android:textColor="@color/White"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/header_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/multiple_sclerosis"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:layout_marginTop="30dp"/>

    <Button
        android:id="@+id/header_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/falling_biomechanics"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/header_1"
        android:layout_marginTop="8dp"/>

    <Button
        android:id="@+id/header_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_the_app"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/header_2"
        android:layout_marginTop="8dp"/>

    <Button
        android:id="@+id/header_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/msense_group"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/header_3"
        android:layout_marginTop="8dp"/>


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginStart="80dp"
        android:layout_marginBottom="57dp"
        app:layout_constraintBottom_toTopOf="@+id/nav_view"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/logo_icon" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/about_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:layout="@layout/about_headercard"
        tools:layout_editor_absoluteX="0dp" >

    </androidx.recyclerview.widget.RecyclerView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="?android:attr/windowBackground"
        app:itemBackground="@color/colorPrimary"
        app:itemIconTint="@android:color/white"
        app:itemTextColor="@android:color/white"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottom_nav_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>